@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        vertxJooqVersion = '3e12c80af5'
+        vertxJooqVersion = '6.5.0'
         flywayVersion = '6.5.5'
     }
     repositories {
@@ -10,7 +10,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.github.hiddenswitch.vertx-jooq:vertx-jooq-generate:$vertxJooqVersion"
+        classpath "io.github.jklingsporn:vertx-jooq-generate:$vertxJooqVersion"
         classpath "org.postgresql:postgresql:$postgresqlVersion"
         classpath "io.vertx:vertx-core:$vertxVersion"
         classpath "com.databasesandlife:java-common:$databasesandlifeVersion"
@@ -19,10 +19,11 @@ buildscript {
 
 
 plugins {
-    id 'com.bmuschko.docker-remote-api' version '6.6.1'
+    id 'com.bmuschko.docker-remote-api' version '7.3.0'
     id 'com.google.cloud.tools.jib' version '2.7.1'
     id "org.flywaydb.flyway" version "$flywayVersion"
     id 'com.github.johnrengelman.shadow' version "$shadowPluginVersion"
+    id 'org.javamodularity.moduleplugin'
 }
 
 
@@ -30,7 +31,6 @@ apply plugin: 'base'
 apply plugin: 'java-library'
 apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
-apply plugin: 'com.bmuschko.docker-remote-api'
 apply plugin: 'idea'
 apply from: '../gradle/instrument.gradle'
 
@@ -40,7 +40,6 @@ import com.bmuschko.gradle.docker.tasks.container.DockerCreateContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerRemoveContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerStartContainer
 import com.bmuschko.gradle.docker.tasks.container.DockerStopContainer
-import com.bmuschko.gradle.docker.tasks.container.extras.DockerLivenessContainer
 import com.databasesandlife.util.jooq.PostgresXmlDomElementBinding
 import io.github.jklingsporn.vertx.jooq.shared.postgres.JSONBToJsonObjectConverter
 import io.vertx.core.json.JsonObject
@@ -56,7 +55,8 @@ def localDatabaseName = 'spellsource'
 def mainClassNameConst = 'com.hiddenswitch.framework.EntryPoint'
 def jdbcUrl = "jdbc:postgresql://localhost:5432/$localDatabaseName"
 def createPostgresImage = tasks.getByPath(':spellsource-containers:createPostgresImage')
-def createKeycloakImage = tasks.getByPath(':spellsource-containers:createKeycloakStandaloneImage')
+def createKeycloakImage = tasks.getByPath(':spellsource-containers:createKeycloakImage')
+def openModulesArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 
 application {
     mainClassName mainClassNameConst
@@ -101,6 +101,7 @@ dependencies {
 
     // environment
     implementation "ch.qos.logback:logback-classic:1.2.3"
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
     implementation group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.2'
     implementation("com.databasesandlife:java-common:$databasesandlifeVersion") {
         exclude group: 'com.google.gdata', module: '*'
@@ -134,9 +135,9 @@ dependencies {
         exclude group: 'io.vertx', module: 'vertx-core'
     }
 
-    implementation 'org.jooq:jooq:3.13.5'
+    implementation 'org.jooq:jooq:3.16.4'
     implementation "io.vertx:vertx-pg-client:$vertxVersion"
-    implementation("com.github.hiddenswitch.vertx-jooq:vertx-jooq-classic-reactive:$vertxJooqVersion") {
+    implementation("io.github.jklingsporn:vertx-jooq-classic-reactive:$vertxJooqVersion") {
         exclude group: "io.vertx", module: '*'
     }
 
@@ -158,7 +159,6 @@ dependencies {
     implementation(group: 'com.github.pcj', name: 'google-options', version: '1.0.0') {
         exclude group: 'com.google.guava', module: 'guava'
     }
-
 
 
     testImplementation(project(':spellsource-containers'))
@@ -196,7 +196,8 @@ run {
     description("Starts the Spellsource server locally. Starts all dependencies using Docker (must be installed).")
     dependsOn += [classes, testClasses, createPostgresImage, createKeycloakImage]
     classpath sourceSets.test.runtimeClasspath
-    main = 'com.hiddenswitch.framework.tests.applications.EntryPoint'
+    mainClass.set('com.hiddenswitch.framework.tests.applications.EntryPoint')
+    jvmArgs(openModulesArgs)
 }
 
 artifacts {
@@ -231,6 +232,9 @@ task createPostgresContainer(type: DockerCreateContainer, group: 'Spellsource In
 task startPostgresContainer(type: DockerStartContainer, group: 'Spellsource Internal') {
     dependsOn createPostgresContainer
     targetContainerId createPostgresContainer.getContainerId()
+    doLast {
+        sleep(12000)
+    }
 }
 
 task stopPostgresContainer(type: DockerStopContainer, group: 'Spellsource Internal') {
@@ -241,38 +245,25 @@ task createKeycloakContainer(type: DockerCreateContainer, group: 'Spellsource In
     dependsOn += [createPostgresContainer, createKeycloakImage]
     targetImageId createKeycloakImage.imageId
     envVars.putAll([
-            'DB_VENDOR'  : 'postgres',
-            'DB_ADDR'    : 'database:5432',
-            'DB_USER'    : 'admin',
-            'DB_PASSWORD': 'password',
-            'DB_DATABASE': 'spellsource',
-            'DB_SCHEMA'  : 'keycloak'
+            'KEYCLOAK_DATABASE_HOST'    : 'gradleSupabasePostgres',
+            'KEYCLOAK_DATABASE_PORT'    : '5432',
+            'KEYCLOAK_DATABASE_USER'    : 'admin',
+            'KEYCLOAK_DATABASE_PASSWORD': 'password',
+            'KEYCLOAK_DATABASE_NAME'    : 'spellsource',
+            'KEYCLOAK_DATABASE_SCHEMA'  : 'keycloak'
     ])
     hostConfig.autoRemove.set(true)
-    hostConfig.links.set(['gradleSupabasePostgres:database'])
+    hostConfig.portBindings.set(["8080:8080"])
+    hostConfig.links.set(['gradleSupabasePostgres:gradleSupabasePostgres'])
 }
 
 task startKeycloakContainer(type: DockerStartContainer, group: 'Spellsource Internal') {
     dependsOn += [createKeycloakContainer, startPostgresContainer]
     targetContainerId createKeycloakContainer.getContainerId()
-}
-
-// investigate why windows can simply not use a liveness probe here
-if (isWindows) {
-    task startAndWaitOnHealthyKeycloakContainer(group: 'Spellsource Internal') {
-        dependsOn startKeycloakContainer
-        doLast {
-            sleep(21000)
-        }
-    }
-} else {
-    task startAndWaitOnHealthyKeycloakContainer(group: 'Spellsource Internal', type: DockerLivenessContainer) {
-        dependsOn startKeycloakContainer
-        livenessProbe = new LivenessProbe(40000, 1000, 'Admin console')
-        targetContainerId createKeycloakContainer.getContainerId()
+    doLast {
+        sleep(30000)
     }
 }
-
 
 task stopKeycloakContainer(type: DockerStopContainer, group: 'Spellsource Internal') {
     targetContainerId createKeycloakContainer.getContainerId()
@@ -306,10 +297,10 @@ task jooqGenerate(group: 'Spellsource Internal') {
                                             .withUserType(JsonObject.class.getName())
                                             .withConverter(JSONBToJsonObjectConverter.class.getName())
                                             .withIncludeTypes("jsonb"),
-                                    new ForcedType()
+                                    /*new ForcedType()
                                             .withUserType(Element.class.getName())
                                             .withConverter(PostgresXmlDomElementBinding.class.getName())
-                                            .withIncludeTypes("xml"))
+                                            .withIncludeTypes("xml")*/)
                             .withIncludeTables(true)
                             .withIncludeRoutines(true)
                             .withIncludePackages(false)
@@ -365,7 +356,7 @@ flyway {
 }
 
 // Make sure keycloak has done its migration first
-flywayMigrate.dependsOn += [startAndWaitOnHealthyKeycloakContainer]
+flywayMigrate.dependsOn += [startKeycloakContainer]
 
 test {
     group('spellsource')
@@ -390,5 +381,6 @@ jib {
     }
     container {
         ports = ['8080']
+        jvmFlags = openModulesArgs
     }
 }
